--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,8 @@ dependencies = [
     "typing-inspection==0.4.2",
     "uvicorn==0.40.0",
 ]
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.2",
+]
