--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,17 +11,9 @@ services:
     image: redis:8.4.0
     ports:
       - "6379:6379"
-#docker compose build
-  #test:
-  #  build: .
-  #  command: pytest -v
-
-  #test-cov:
-  #  build: .
-  #  command: pytest --cov=app --cov-report=term-missing
-
-  #app:
-  #  build: .
-  #  command: uvicorn app.main:app --host 0.0.0.0 --reload
-  #  ports:
-  #    - "8000:8000"
+  prometheus:
+    image: prom/prometheus:latest
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
