--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "fastapi==0.128.0",
     "h11==0.16.0",
     "idna==3.11",
+    "prometheus-client>=0.24.1",
     "pydantic==2.12.5",
     "pydantic-core==2.41.5",
     "pydantic-settings==2.12.0",
