--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,6 @@ services:
     ports:
       - "8000:8000"
     command: sh -c "uv run uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
-    #command: uv run uvicorn app.main:app --reload
     depends_on:
       - redis
   redis:
@@ -17,3 +16,7 @@ services:
       - "9090:9090"
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - "3000:3000"
