--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .venv
 __pycache__
+*/__pycache__/
+*/*/__pycache__/
+*/*/*/__pycache__/
 .idea
 .docker/
-*/__pycache__
-**/__pycache__
-***/__pycache__
 .DS_Store
